# toxic-comment-classification

./: .gitignore  main.py  pyproject.toml
models/: vectorize_layer_model.keras  vectorize_layer_model_21981929f2.keras  vectorize_layer_model_2cb78a4409.keras  vectorize_layer_model_2dbe9710d9.keras  vectorize_layer_model_6427a2878a.keras  vectorize_layer_model_79e4541ecb.keras  vectorize_layer_model_8c056adee1.keras  vectorize_layer_model_914b91e60f.keras  vectorize_layer_model_92346f23e3.keras  vectorize_layer_model_a27248688d.keras
src/: Config.py  DownloadData.py  Logging.py  MakeDatasets.py  Modeling.py  Preprocessing.py  Types.py  __init__.py  config.py  dataset.py  datasets.py  download.py  explore.py  load_data.py  make_dataset.py  model.py  preprocess.py  util.py  utils.py
tests/: mock_data.py  test_download.py  test_load_data.py  test_preprocess.py
