[project]
name = "toxic-comment-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "kagglehub>=0.3.6",
    "logfire>=3.4.0",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.0",
    "tensorflow==2.16.1",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
